--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -94,7 +94,9 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-  font-weight: $base-font-weight;
+  font-weight: bold;
+  color: white;
+  // $base-font-weight;
 }
 
 
