--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -258,3 +258,28 @@ table {
     border: 1px solid $grey-color-light;
   }
 }
+
+/* Custom dark theme table styles for Minima */
+table {
+  background-color: #1e1e1e !important;
+  border-collapse: collapse;
+  width: 100%;
+  color: #e0e0e0;
+}
+
+table th,
+table td {
+  background-color: #2a2a2a !important;
+  border: 1px solid #444;
+  padding: 8px;
+}
+
+table th {
+  background-color: #333 !important;
+  font-weight: bold;
+}
+
+table tr:nth-child(even),
+table tr:nth-child(odd) {
+  background-color: inherit !important;
+}
